--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
